ASOC-46495 : Alignment issue fixes. (#1983)

--- a/investigate-files/app/styles/investigate-files/files/_manifest.scss
+++ b/investigate-files/app/styles/investigate-files/files/_manifest.scss
@@ -119,6 +119,8 @@ page.investigate-files-engine {
   }
   .rsa-data-table-body-row{
     width: fit-content;
+    min-width: 98%
   }
+  
 }
 
